--- a/r-semana2-presentacion.html
+++ b/r-semana2-presentacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos de R - Semana 2</title>
+    <title>Fundamentos de R - Semana 3</title>
     <style>
         * {
             margin: 0;
@@ -385,22 +385,22 @@
             </div>
             <div class="slide-content">
                 <h1 class="slide-title">Fundamentos de<br>Programación en <span class="r-logo"><img src="./R_logo.png" alt="R Logo"></span></h1>
-                <p class="slide-subtitle">Semana 2 - Estadística para el Análisis de Datos</p>
+                <p class="slide-subtitle">Semana 3 - Análisis de Datos Avanzado para Negocios/p>
                 <div class="content-cards">
                     <div class="card">
                         <span class="card-icon">📚</span>
                         <h3 class="card-title">Curso</h3>
-                        <p class="card-content">Estadística para el análisis de datos</p>
+                        <p class="card-content">Análisis de Datos Avanzado para Negocios</p>
                     </div>
                     <div class="card">
                         <span class="card-icon">👨‍🏫</span>
                         <h3 class="card-title">Profesor</h3>
-                        <p class="card-content">Jordy Jesús Alfaro Brenes</p>
+                        <p class="card-content">Andrew Bocker Páez</p>
                     </div>
                     <div class="card">
                         <span class="card-icon">💻</span>
                         <h3 class="card-title">Modalidad</h3>
-                        <p class="card-content">Virtual - Teams</p>
+                        <p class="card-content">Virtual</p>
                     </div>
                 </div>
             </div>
