--- a/AnalisisDatos_Semana3.html
+++ b/AnalisisDatos_Semana3.html
@@ -433,6 +433,17 @@
                         </div>
                     </div>
                     <div class="card">
+                        <span class="card-icon">🔧</span>
+                        <h3 class="card-title">Uso R Online</h3>
+                        <div class="card-content">
+                            <ul class="bullet-list">
+                                <li>Ingresar a ROnline mediante posit.cloud</li>
+                                <li>Crear cuenta gratuita</li>
+                                <li>Crear nuevo proyecto de RStudio</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
                         <span class="card-icon">📊</span>
                         <h3 class="card-title">Estructuras</h3>
                         <div class="card-content">
